
=== 4.0.0 (unreleased) ===
* Backported from develop: Upgrade Gulp and NodeJs
* feat: Re-enable showing the toolbar to anonymous users
* Backport django 3.2 support
* Backport django 3.1 support
* Backport django 3.0 support
* Allow Pagecontent.limit_visibility_in_menu to be reset once it has been set
* Backported from develop: Added support for Github Actions based CI.
* Backported from develop: Added Support for testing frontend, docs, test and linting in different/parallel CI pipelines.
* Backported from develop: Remove travis integration from the project as the project has moved to Github Actions.
* Backported from develop-4: Fixed usage of ``get_object`` in ``edit_title_fields`` of the page admin.


=== 3.6.0 (unreleased) ===

* Introduced Django 2.2 support.
* Removed the ``cms moderator`` command.
* Dropped Django < 1.11 support.
* Removed the translatable content get / set methods from ``CMSPlugin`` model.
* Removed signal handlers for ``Page``, ``Title``, ``Placeholder`` and ``CMSPlugin`` models.
* Moved ``Title.meta_description`` length restriction from model to form
  and increased its max length to 320 characters.
* Added ``page_title`` parameter for ``cms.api.create_page()`` and ``cms.api.create_title()``.
* Introduced Django 2.0 support.
* Introduced Django 2.1 support.


=== 3.5.2 (2018-04-11) ===

* Fixed a bug where shortcuts menu entry would stop working after toolbar reload
* Fixed a race condition in frontend code that could lead to sideframe being
  opened with blank page
* Fixed a bug where the direct children of the homepage would get a leading ``/``
  character when the homepage was moved or published.
* Fixed a bug where non-staff user would be able to open empty structure board
* Fixed a bug where a static file from Django admin was referenced that no
  longer existed in Django 1.9 and up.
* Fixed a bug where the migration 0018 would fail under certain databases.


=== 3.5.1 (2018-03-05) ===
